# ege2tools

./: .clang-format  CMakeLists.txt
EGE2Editor/: CMakeLists.txt
EGE2Editor/Implementation/: Application.cpp  Application.hpp  main.cpp
EGE2Editor/Implementation/Plugins/: PluginsManager.cpp
EGE2Editor/Interface/Plugins/: Plugin.hpp  PluginsManager.hpp
EGE2EditorPlugins/: CMakeLists.txt
EGE2EditorPlugins/CorePlugin/: CMakeLists.txt  CorePlugin.xml
EGE2EditorPlugins/CorePlugin/Implementation/: CorePlugin.cpp  CorePlugin.hpp
EGE2EditorPlugins/CorePlugin/Implementation/Project/: Project.cpp  ProjectFactory.cpp
EGE2EditorPlugins/CorePlugin/Interface/: CorePlugin_global.h
EGE2EditorPlugins/CorePlugin/Interface/Project/: Project.hpp  ProjectFactory.hpp
EGE2EditorPlugins/WorkspacePlugin/: CMakeLists.txt  WorkspacePlugin.xml
EGE2EditorPlugins/WorkspacePlugin/Implementation/: QmlStatusBar.cpp  QmlStatusBar.hpp  WorkspacePlugin.cpp  WorkspacePlugin.hpp
EGE2EditorPlugins/WorkspacePlugin/Interface/: WorkspacePlugin_global.h
EGE2EditorPlugins/WorkspacePlugin/Resources/: EmptyProject.ui.qml  main.qml  resources.qrc
